# discord_bot

./: .coverage  .flake8  .gitignore  .pylintrc  BATTLE_SYSTEM.md  CHANNEL_ROUTING_SETUP.md  COMMAND_REGISTRY_DIAGNOSTIC.md  COMMAND_SANITIZER_IMPLEMENTATION.md  COMMAND_SYNC_RESOLUTION.md  COOKIE_TRACKING_IMPLEMENTATION.md  CURRENT_ACTIVE_ISSUES.txt  DIAGNOSTIC_COMPLETE.md  Dockerfile  EC2_DEPLOYMENT_GUIDE.md  EVENT_REMINDER_DIAGNOSTIC_REPORT.md  EVOLUTION_SYSTEM.md  FEATURE_IMPLEMENTATION_PLAN.md  FINAL_ACTION_PLAN.md  GOOGLE_TRANSLATE_QUICKSTART.md  HELPER_ROLE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_NORMALIZATION.md  Lucy.py  OPERATIONS.md  PHASE5_QUICK_START.md  PHASES_8-12_SYNC_RESOLUTION.md  QUICK_DEPLOY_REFERENCE.md  QUICK_START_GUIDE.md  RANKING_ADMIN_COMMANDS.md  RANKING_SYSTEM.md  README.md  README_SETUP.md  ROUTING_LOGIC_AND_CHANNELS.md  RUNBOOK.md  SECURITY_GUIDE.md  SETUP_SUCCESS.txt  SOS_IMPLEMENTATION.md  SOS_TRANSLATION.md  TEST_SOS_SYSTEM.md  THREE_TIER_TRANSLATION_SUMMARY.md  (+34 more)
.github/: copilot-instructions.md
ai_systems/: MASTER_DEPLOYMENT.md
cogs/: admin_cog.py  battle_cog.py  easteregg_cog.py  event_cog.py  event_management_cog.py  game_cog.py  help_cog.py  image_diagnostic_cog.py  kvk_visual_cog.py  ocr_report_cog.py  ranking_cog.py  role_management_cog.py  sos_phrase_cog.py  training_cog.py  translation_cog.py  unified_ranking_cog.py
config/: config.example.json
core/: event_bus.py  event_topics.py  ui_groups.py
data/: command_schema_hashes.json  event_rankings.db  event_registry.json  game_data.db  kvk_events.db  session_state.json  (+2 more)
(+578 files in other folders)
