[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hippobot"
version = "2.0.0"
description = "A Discord translation and gaming bot."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "frozenlist==1.4.1",
    "idna==3.7",
    "multidict==6.0.5",
    "pydantic==2.7.1",
    "pydantic_core==2.18.2",
    "PyNaCl==1.5.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "six==1.16.0",
    "urllib3==2.2.1",
    "yarl==1.9.4",
    "discord.py==2.3.2"
]

[project.urls]
"Homepage" = "https://github.com/eparian314-collab/hippobot"
"Issues" = "https://github.com/eparian314-collab/hippobot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["discord_bot*"]
exclude = ["tests*", "docs*", "scripts*"]
